--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -192,10 +192,10 @@
       }
     }
 
-    var loadedId = sessionStorage.getItem("name" + "이건 main에서의 Id");
-    var loadedName = sessionStorage.getItem("pName" + "이건 main에서의 name");
-    console.log(loadedId)
-    console.log(loadedName)
+    var loadedname = sessionStorage.getItem("name");
+    var loadedpName = sessionStorage.getItem("pName");
+    console.log(loadedname)
+    console.log(loadedpName)
 
     // // @@ 선택된 교육생 세션 유지용, 일단 스트링으로 표현, merge 후 수정 예정 @@
     // var pickId = "k"
