--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -126,7 +126,7 @@
       success: function (response) {
         if (response["result"] == "success") {
           alert("회원가입을 완료했습니다.");
-          window.location.href = '/main/list';
+          window.location.href = '/';
         } else if (response["result"] == "fail") {
           alert("회원가입에 실패했습니다.")
         }
