--- a/templates/writing.html
+++ b/templates/writing.html
@@ -89,8 +89,7 @@
   </style>
   <script>
     // 변수 불러오기(사용자 세션 유지용)
-    var loadedId = sessionStorage.getItem("myId");
-    // 선택한 교육생 세션 @@@@@@@@@@@@@@ id로된거 수정
+    var loadedId = sessionStorage.getItem("name");
     var loadedName = sessionStorage.getItem("pName");
 
     var selectedGKey = [];
