--- a/templates/writing.html
+++ b/templates/writing.html
@@ -89,7 +89,7 @@
   </style>
   <script>
     // 변수 불러오기(사용자 세션 유지용)
-    var loadedId = sessionStorage.getItem("myId");
+    var loadedId = sessionStorage.getItem("name");
     // 선택한 교육생 세션 @@@@@@@@@@@@@@ id로된거 수정
     var loadedName = sessionStorage.getItem("pName");
 
