--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -235,7 +235,7 @@
         <button class="sorter" type="submit">가나다 순으로</button>
       </form>
       <form action="/main/commentsort" method="post">
-        <button class="sorter" type="submit">키워드 많은 순으로</button>
+        <button class="sorter" type="submit">코멘트 많은 순으로</button>
       </form>
 
     </div>
