서버 배포 완료

--- a/templates/logIn.html
+++ b/templates/logIn.html
@@ -121,7 +121,8 @@
         <!-- type="submit"에서 "button"으로 수정 -->
         <button onclick="postInfo()" class="button" type="button">로그인</button>
         <!-- location.href''은 페이지 이동(뒤로가기 가능) -->
-        <button onclick="location.href='http://localhost:5001/user/signup?'" class="button" type="button">회원가입
+        <!-- onclick="location.href='http://43.201.26.201/user/signup?'" -->
+        <button onclick="location.href='/user/signup?'" class="button" type="button">회원가입
           하기</button>
       </span>
     </form>
