--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -183,7 +183,8 @@
     </div>
   </section>
   <section class="middleSection">
-    <form id="form_Container" action="http://localhost:5001/user/feature/signup" method="post" enctype="multipart/form-data">
+    <!--action="http://43.201.26.201/user/feature/signup"-->
+    <form id="form_Container" action="/user/feature/signup" method="post" enctype="multipart/form-data">
       <h1 id="Title">회원가입</h1>
       <input class="inputBox" id="id" placeholder="아이디를 입력해주세요." required >
       <input class="inputBox" id="pw" type="password" placeholder="비밀번호를 입력해주세요." required>
